updated intensedebate logo on oauth config, fixed spacing/sizing in css

--- a/client/layout/masterbar/oauth-client.scss
+++ b/client/layout/masterbar/oauth-client.scss
@@ -713,3 +713,8 @@
 		color: var(--color-text);
 	}
 }
+
+.layout.dops.intensedebate .masterbar__oauth-client-logo img {
+	max-height: 30px;
+	margin-left: 10px;
+}
